--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 
 <html lang="en">
-<head
+<head>
   <meta charset="utf-8">
   <title>Code Challenge #1</title>
   <style>
   	body {
   		background-color:#D7C0D0;
-  		margin: 0;
+  		margin: 0 auto;
   	}
   	.wrapper {
   		background-color: #fff;
@@ -15,14 +15,15 @@
   		margin: 0 auto;
   		padding: 100px;
   	}
-  	h1 [
+  	<h1> {
   		font-size: 48px;
   		color: #000;
   		line-height: 58px;
   		font-family: Arial, sans-serif;
   		margin: 0 0 20px 0;
-  	]
-  	p {
+  	}
+  	</h1>
+  	  {
   		font-family: Arial, sans-serif;
   		font-size: 18px;
   		line-height: 28px;
@@ -35,7 +36,7 @@
 <body>
   <div class"wrapper">
   	<h1>This is your first code challenge.</h1>
-  	<p>There are 4 errors in this code. Correct them and upload your corrected file<p>
+  	<p>There are 4 errors in this code. Correct them and upload your corrected file</p>
   </div>
 </body>
 
