--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </head>
 
 <body>
-  <div class"wrapper">
+  <div class="wrapper">
   	<h1>This is your first code challenge.</h1>
-  	<p>There are 4 errors in this code. Correct them and upload your corrected file</p>
+  	<p>There are 4 errors in this code. Correct them and upload your corrected file.</p>
   </div>
 </body>
 
